<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_coustomChat_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_name"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_coustomChat_LastSeen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_seen"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_coustomChat_Name" />

    <ImageButton
        android:id="@+id/btn_video_call"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/btnvideo"
        android:scaleType="fitCenter"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_coustomChat_Name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51"
        app:srcCompat="@drawable/baseline_videocam_black_24dp" />

    <ImageButton
        android:id="@+id/btn_voice_call"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/btnvoicecall"
        android:scaleType="fitCenter"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_video_call"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_phone_black_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>